--- a/index.html
+++ b/index.html
@@ -149,15 +149,15 @@
 
       <h2 class="mb-10 font-serif text-dark-blueish text-3xl text-center mx-auto font-normal">Latest Articles</h2>
 
-      <div class="flex flex-col items-center gap-8 md:grid md:grid-cols-2 md:place-items-center lg:flex-row">
+      <div class="flex flex-col items-center gap-8 md:grid md:grid-cols-2 md:place-items-center lg:flex-row lg:w-90% mx-auto lg:gap-4">
 
-        <div class="w-85% rounded-md overflow-hidden h-500px max-h-550px">
+        <div class="w-85% rounded-md overflow-hidden h-500px max-h-550px ">
 
           <div class="w-full h-1/2">
             <img src="./images/image-currency.jpg" alt="currency-images" class="w-full h-full object-cover">
           </div>
   
-          <div class="flex flex-col bg-white p-10 text-left">
+          <div class="flex flex-col bg-white py-10 px-4 text-left">
             <small class="text-sm opacity-45 mb-4">
               By Claire Robinson
             </small>
@@ -166,7 +166,7 @@
               Receive money in any currency with no fees
             </h4>
   
-            <p class="text-sm opacity-45 max-w-80">
+            <p class="text-sm opacity-45 max-w-80 lg:min-h-100px lg:min-w-220px">
               The world is getting smaller and we’re becoming more mobile. So why should you be 
               forced to only receive money in a single …
             </p>
@@ -179,7 +179,7 @@
             <img src="./images/image-restaurant.jpg" alt="currency-images" class="w-full h-full object-cover">
           </div>
   
-          <div class="flex flex-col bg-white p-10 text-left">
+          <div class="flex flex-col bg-white px-4 py-10 text-left">
             <small class="text-sm opacity-45 mb-4">
               By Wilson Hutton
             </small>
@@ -188,7 +188,7 @@
               Treat yourself without worrying about money
             </h4>
   
-            <p class="text-sm opacity-45 max-w-80">
+            <p class="text-sm opacity-45 max-w-80 lg:min-h-100px lg:min-w-220px">
               Our simple budgeting feature allows you to separate out your spending and set 
               realistic limits each month. That means you …
             </p>
@@ -201,7 +201,7 @@
             <img src="images/image-plane.jpg" alt="wing-of-plane-image" class="w-full h-full object-cover">
           </div>
   
-          <div class="flex flex-col bg-white p-10 text-left">
+          <div class="flex flex-col bg-white px-4 py-10 text-left">
             <small class="text-sm opacity-45 mb-4">
               By Wilson Hutton
             </small>
@@ -210,7 +210,7 @@
               Take your Easybank card wherever you go
             </h4>
   
-            <p class="text-sm opacity-45 max-w-80">
+            <p class="text-sm opacity-45 max-w-80 lg:min-h-100px lg:min-w-220px">
               We want you to enjoy your travels. This is why we don’t charge any fees on purchases 
               while you’re abroad. We’ll even show you …
             </p>
@@ -223,7 +223,7 @@
             <img src="./images/image-confetti.jpg" alt="confetti-image" class="w-full h-full object-cover">
           </div>
   
-          <div class="flex flex-col bg-white p-10 text-left">
+          <div class="flex flex-col bg-white px-4 py-10 text-left">
             <small class="text-sm opacity-45 mb-4">
               By Claire Robinson
             </small>
@@ -232,7 +232,7 @@
               Our invite-only Beta accounts are now live!
             </h4>
   
-            <p class="text-sm opacity-45 max-w-80">
+            <p class="text-sm opacity-45 max-w-80 lg:min-h-100px lg:min-w-220px">
               After a lot of hard work by the whole team, we’re excited to launch our closed beta. 
               It’s easy to request an invite through the site ...
             </p>
