work on the mobile navbar
i ensured that once the items(navigation to the page's different sections) in the mobile navbar are clicked, the mobilenavbar actually disappers)

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body class="min-h-full w-full text-lg">
 
-  <header class="fixed w-full top-0 z-20 bg-white p-6">
+  <header class="fixed w-full top-0 z-20 bg-white p-6" id="careers">
 
     <nav class="flex sm:justify-between justify-evenly items-center h-25px">
       <div class="h-5 min-w-36">
@@ -43,13 +43,13 @@
         <li class="nav-links text-base text-greyish">Careers</li>
       </ul>
 
-      <ul class=" hidden flex-col fixed top-24 right-0 h-2/5 w-90% z-10 bg-white left-0 mx-auto rounded-md justify-center items-center gap-8 md:hidden lg:hidden mobile-nav">
+      <ul class=" hidden flex-col fixed top-24 right-0 h-2/5 w-90% z-10 bg-white left-0 mx-auto rounded-md justify-center items-center gap-8 md:hidden lg:hidden mobile-nav" id="my-list">
 
-       <a href="#home" class=""><li class="nav-links text-lg text-dark-blueish">Home</li></a> 
-       <a href="#about" class=""><li class="nav-links text-lg text-dark-blueish">About</li></a> 
-       <a href="#contact" class=""><li class="nav-links text-lg text-dark-blueish">Contact</li></a> 
-       <a href="#blog" class=""><li class="nav-links text-lg text-dark-blueish">Blog</li></a> 
-       <a href="#careers" class=""><li class="nav-links text-lg text-dark-blueish">Careers</li></a> 
+       <a href="#home" class="m-home"><li class="nav-links text-lg text-dark-blueish">Home</li></a> 
+       <a href="#about" class="m-about"><li class="nav-links text-lg text-dark-blueish">About</li></a> 
+       <a href="#contact" class="m-contact"><li class="nav-links text-lg text-dark-blueish">Contact</li></a> 
+       <a href="#blog" class="m-blog"><li class="nav-links text-lg text-dark-blueish">Blog</li></a> 
+       <a href="#careers" class="m-careers"><li class="nav-links text-lg text-dark-blueish">Careers</li></a> 
   
       </ul>
 
@@ -59,9 +59,9 @@
     </nav>
   </header>
 
-  <main class="h-screen w-full" id="home">
+  <main class="h-screen w-full">
 
-    <section class="hero bg-light-grey-grey w-full pb-24 lg:pb-0">
+    <section class="hero bg-light-grey-grey w-full pb-24 lg:pb-0" id="home">
 
       <div class="lg:flex lg:w-full lg:justify-between">
 
@@ -99,7 +99,7 @@
 
     </section>
 
-    <section class="bg-light-grey-blue w-full py-20 px-6">
+    <section class="bg-light-grey-blue w-full py-20 px-6 " id="about">
       <div class="sm:text-center text-left md:w-3/5 mx-auto w-4/5 ">
         <h2 class="font-serif text-dark-blueish text-3xl md:max-w-52 sm:max-w-52 mx-auto lg:mx-0 text-center lg:text-left font-normal">Why Choose EasyBank?</h2>
 
@@ -166,7 +166,7 @@
       </div>
     </section>
 
-    <section class="bg-light-grey-grey py-24">
+    <section class="bg-light-grey-grey py-24" id="blog">
 
       <h2 class="mb-10 font-serif text-dark-blueish text-3xl text-center mx-auto font-normal">Latest Articles</h2>
 
@@ -264,7 +264,7 @@
 
     </section>
 
-    <footer class="bg-dark-blueish py-8">
+    <footer class="bg-dark-blueish py-8" id="contact">
 
       <div class="flex sm:flex-col gap-8 sm:justify-center justify-between items-center md:w-4/5 md:mx-auto lg:w-4/5 lg:mx-auto ">
 
