add active states to the nav bar

--- a/index.html
+++ b/index.html
@@ -36,11 +36,13 @@
      </div>
 
       <ul class="sm:hidden flex gap-10">
-        <li class="nav-links text-base text-greyish">Home</li>
-        <li class="nav-links text-base text-greyish">About</li>
-        <li class="nav-links text-base text-greyish">Contact</li>
-        <li class="nav-links text-base text-greyish">Blog</li>
-        <li class="nav-links text-base text-greyish">Careers</li>
+        <li class="nav-links text-base"><a href="#home" class="text-greyish-blue hover:bg-gradient-to-r from-greenish from-27% to-sky-blueish to-100% hover:bg-no-repeat hover:bg-bottom bg-[length:100%_4px] pb-6 hover:text-black">Home</a></li>
+        <li class="nav-links text-base"><a href="#about" class="text-greyish-blue hover:bg-gradient-to-r from-greenish from-27% to-sky-blueish to-100% hover:bg-no-repeat hover:bg-bottom bg-[length:100%_4px] pb-6 hover:text-black">About</a></li>
+        <li class="nav-links text-base"><a href="#contact" class="text-greyish-blue hover:bg-gradient-to-r from-greenish from-27% to-sky-blueish to-100% hover:bg-no-repeat hover:bg-bottom bg-[length:100%_4px] pb-6 hover:text-black">Contact</a></li>
+        <li class="nav-links text-base"><a href="#blog" class="text-greyish-blue hover:bg-gradient-to-r from-greenish from-27% to-sky-blueish to-100% hover:bg-no-repeat hover:bg-bottom bg-[length:100%_4px] pb-6 hover:text-black">Blog</a></li>
+        <li class="nav-links text-base"><a href="#careers" class="text-greyish-blue hover:bg-gradient-to-r from-greenish from-27% to-sky-blueish to-100% hover:bg-no-repeat hover:bg-bottom bg-[length:100%_4px] pb-6 hover:text-black">Careers</a></li>
+        
+        
       </ul>
 
       <ul class=" hidden flex-col fixed top-24 right-0 h-2/5 w-90% z-10 bg-white left-0 mx-auto rounded-md justify-center items-center gap-8 md:hidden lg:hidden mobile-nav" id="my-list">
@@ -85,7 +87,7 @@
   
         <div class="hero-text lg:w-4/12 flex flex-col w-90% mx-auto my-0 justify-center items-center mt-5">
   
-          <h1 class="text-center text-4xl md:text-md md:w-3/5 font-serif text-dark-blueish tracking-wide sm:max-w-360px">Next generation digital banking</h1>
+          <h1 class="text-center text-4xl md:text-md md:w-3/5 font-serif text-dark-blueish tracking-wide sm:max-w-360px lg:w-360px">Next generation digital banking</h1>
   
           <p class="sm:max-w-360px md:text-center lg:text-center md:max-w-450px mt-6 mx-auto text-base opacity-45">
             Take your financial life online. Your Easybank account will be a one-stop-shop for spending, saving, budgeting, investing, and much more.
